.antlr/PLATAParser.java
// Generated from c:/Users/Antonio/Desktop/UPM/TFG/antlrEjercicios/GramaticaAutomatizada/PLATA.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLATAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, AVANZA=7, GIRA=8, PARA=9, 
		WHILE=10, ELSE_IF=11, ELSE=12, IF=13, TRUE=14, FALSE=15, NULL=16, MENOS=17, 
		MULTIPLICACION=18, DIVISION=19, MODULO=20, SUMA=21, MAYOR_IGUAL=22, MENOR_IGUAL=23, 
		MAYOR=24, MENOR=25, DISTINTO=26, IGUAL_QUE=27, NOT=28, AND=29, OR=30, 
		INT=31, FLOAT=32, STRING=33, ID=34, LINE_COMMENT=35, COMMENT=36, WS=37;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_avanza = 2, RULE_gira = 3, 
		RULE_para = 4, RULE_asignacion = 5, RULE_if_sentencia = 6, RULE_bucle_while = 7, 
		RULE_bloque = 8, RULE_expr = 9, RULE_expr_aritmeticas = 10, RULE_expr_relacionales = 11, 
		RULE_expr_logica = 12, RULE_atomico = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "avanza", "gira", "para", "asignacion", "if_sentencia", 
			"bucle_while", "bloque", "expr", "expr_aritmeticas", "expr_relacionales", 
			"expr_logica", "atomico"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "','", "')'", "'='", "'{'", "'}'", null, null, null, null, 
			"'sinosi'", "'sino'", "'si'", null, null, null, "'-'", "'*'", "'/'", 
			"'%'", "'+'", "'>='", "'<='", "'>'", "'<'", "'!='", "'=='", "'!'", "'&&'", 
			"'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "AVANZA", "GIRA", "PARA", "WHILE", 
			"ELSE_IF", "ELSE", "IF", "TRUE", "FALSE", "NULL", "MENOS", "MULTIPLICACION", 
			"DIVISION", "MODULO", "SUMA", "MAYOR_IGUAL", "MENOR_IGUAL", "MAYOR", 
			"MENOR", "DISTINTO", "IGUAL_QUE", "NOT", "AND", "OR", "INT", "FLOAT", 
			"STRING", "ID", "LINE_COMMENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PLATA.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PLATAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PLATAParser.EOF, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				sentencia();
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 32212445058L) != 0) );
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public AvanzaContext avanza() {
			return getRuleContext(AvanzaContext.class,0);
		}
		public GiraContext gira() {
			return getRuleContext(GiraContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public If_sentenciaContext if_sentencia() {
			return getRuleContext(If_sentenciaContext.class,0);
		}
		public Bucle_whileContext bucle_while() {
			return getRuleContext(Bucle_whileContext.class,0);
		}
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				avanza();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				gira();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				para();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(38);
				asignacion();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(39);
				if_sentencia();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(40);
				bucle_while();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(41);
				expr_aritmeticas(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AvanzaContext extends ParserRuleContext {
		public TerminalNode AVANZA() { return getToken(PLATAParser.AVANZA, 0); }
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public AvanzaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_avanza; }
	}

	public final AvanzaContext avanza() throws RecognitionException {
		AvanzaContext _localctx = new AvanzaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_avanza);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(AVANZA);
			setState(45);
			match(T__0);
			setState(46);
			expr_aritmeticas(0);
			setState(47);
			match(T__1);
			setState(48);
			expr_aritmeticas(0);
			setState(49);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GiraContext extends ParserRuleContext {
		public TerminalNode GIRA() { return getToken(PLATAParser.GIRA, 0); }
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public GiraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gira; }
	}

	public final GiraContext gira() throws RecognitionException {
		GiraContext _localctx = new GiraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_gira);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(GIRA);
			setState(52);
			match(T__0);
			setState(53);
			expr_aritmeticas(0);
			setState(54);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParaContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(PLATAParser.PARA, 0); }
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_para);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(PARA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PLATAParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(ID);
			setState(59);
			match(T__3);
			setState(60);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_sentenciaContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(PLATAParser.IF, 0); }
		public List<Expr_logicaContext> expr_logica() {
			return getRuleContexts(Expr_logicaContext.class);
		}
		public Expr_logicaContext expr_logica(int i) {
			return getRuleContext(Expr_logicaContext.class,i);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public List<TerminalNode> ELSE_IF() { return getTokens(PLATAParser.ELSE_IF); }
		public TerminalNode ELSE_IF(int i) {
			return getToken(PLATAParser.ELSE_IF, i);
		}
		public TerminalNode ELSE() { return getToken(PLATAParser.ELSE, 0); }
		public If_sentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_sentencia; }
	}

	public final If_sentenciaContext if_sentencia() throws RecognitionException {
		If_sentenciaContext _localctx = new If_sentenciaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_if_sentencia);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(IF);
			setState(63);
			match(T__0);
			setState(64);
			expr_logica(0);
			setState(65);
			match(T__2);
			setState(66);
			bloque();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSE_IF) {
				{
				{
				setState(67);
				match(ELSE_IF);
				setState(68);
				match(T__0);
				setState(69);
				expr_logica(0);
				setState(70);
				match(T__2);
				setState(71);
				bloque();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(78);
				match(ELSE);
				setState(79);
				bloque();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bucle_whileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(PLATAParser.WHILE, 0); }
		public Expr_logicaContext expr_logica() {
			return getRuleContext(Expr_logicaContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Bucle_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_while; }
	}

	public final Bucle_whileContext bucle_while() throws RecognitionException {
		Bucle_whileContext _localctx = new Bucle_whileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bucle_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(WHILE);
			setState(83);
			match(T__0);
			setState(84);
			expr_logica(0);
			setState(85);
			match(T__2);
			setState(86);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__4);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				sentencia();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 32212445058L) != 0) );
			setState(94);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public Expr_relacionalesContext expr_relacionales() {
			return getRuleContext(Expr_relacionalesContext.class,0);
		}
		public Expr_logicaContext expr_logica() {
			return getRuleContext(Expr_logicaContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				expr_aritmeticas(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				expr_relacionales();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				expr_logica(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr_aritmeticasContext extends ParserRuleContext {
		public Expr_aritmeticasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_aritmeticas; }
	 
		public Expr_aritmeticasContext() { }
		public void copyFrom(Expr_aritmeticasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiplicacionExprAritmeticaContext extends Expr_aritmeticasContext {
		public Token op;
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode MULTIPLICACION() { return getToken(PLATAParser.MULTIPLICACION, 0); }
		public TerminalNode DIVISION() { return getToken(PLATAParser.DIVISION, 0); }
		public TerminalNode MODULO() { return getToken(PLATAParser.MODULO, 0); }
		public MultiplicacionExprAritmeticaContext(Expr_aritmeticasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SumaExprAritmeticaContext extends Expr_aritmeticasContext {
		public Token op;
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode SUMA() { return getToken(PLATAParser.SUMA, 0); }
		public TerminalNode MENOS() { return getToken(PLATAParser.MENOS, 0); }
		public SumaExprAritmeticaContext(Expr_aritmeticasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MenosExprAritmeticaContext extends Expr_aritmeticasContext {
		public TerminalNode MENOS() { return getToken(PLATAParser.MENOS, 0); }
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public MenosExprAritmeticaContext(Expr_aritmeticasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AtomicoExprAritmeticaContext extends Expr_aritmeticasContext {
		public AtomicoContext atomico() {
			return getRuleContext(AtomicoContext.class,0);
		}
		public AtomicoExprAritmeticaContext(Expr_aritmeticasContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParentesisExprAritmeticaContext extends Expr_aritmeticasContext {
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public ParentesisExprAritmeticaContext(Expr_aritmeticasContext ctx) { copyFrom(ctx); }
	}

	public final Expr_aritmeticasContext expr_aritmeticas() throws RecognitionException {
		return expr_aritmeticas(0);
	}

	private Expr_aritmeticasContext expr_aritmeticas(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expr_aritmeticasContext _localctx = new Expr_aritmeticasContext(_ctx, _parentState);
		Expr_aritmeticasContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_expr_aritmeticas, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MENOS:
				{
				_localctx = new MenosExprAritmeticaContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(102);
				match(MENOS);
				setState(103);
				expr_aritmeticas(5);
				}
				break;
			case TRUE:
			case FALSE:
			case INT:
			case FLOAT:
			case STRING:
			case ID:
				{
				_localctx = new AtomicoExprAritmeticaContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(104);
				atomico();
				}
				break;
			case T__0:
				{
				_localctx = new ParentesisExprAritmeticaContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(105);
				match(T__0);
				setState(106);
				expr_aritmeticas(0);
				setState(107);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(117);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new MultiplicacionExprAritmeticaContext(new Expr_aritmeticasContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr_aritmeticas);
						setState(111);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(112);
						((MultiplicacionExprAritmeticaContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1835008L) != 0)) ) {
							((MultiplicacionExprAritmeticaContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(113);
						expr_aritmeticas(5);
						}
						break;
					case 2:
						{
						_localctx = new SumaExprAritmeticaContext(new Expr_aritmeticasContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr_aritmeticas);
						setState(114);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(115);
						((SumaExprAritmeticaContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MENOS || _la==SUMA) ) {
							((SumaExprAritmeticaContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(116);
						expr_aritmeticas(4);
						}
						break;
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr_relacionalesContext extends ParserRuleContext {
		public Expr_relacionalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_relacionales; }
	 
		public Expr_relacionalesContext() { }
		public void copyFrom(Expr_relacionalesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelacionesExprRelacionalesContext extends Expr_relacionalesContext {
		public Token op;
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode MAYOR_IGUAL() { return getToken(PLATAParser.MAYOR_IGUAL, 0); }
		public TerminalNode MENOR_IGUAL() { return getToken(PLATAParser.MENOR_IGUAL, 0); }
		public TerminalNode MENOR() { return getToken(PLATAParser.MENOR, 0); }
		public TerminalNode MAYOR() { return getToken(PLATAParser.MAYOR, 0); }
		public RelacionesExprRelacionalesContext(Expr_relacionalesContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParentesisExprRelacionalesContext extends Expr_relacionalesContext {
		public Expr_relacionalesContext expr_relacionales() {
			return getRuleContext(Expr_relacionalesContext.class,0);
		}
		public ParentesisExprRelacionalesContext(Expr_relacionalesContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IgualdadesExprRelacionalesContext extends Expr_relacionalesContext {
		public Token op;
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode IGUAL_QUE() { return getToken(PLATAParser.IGUAL_QUE, 0); }
		public TerminalNode DISTINTO() { return getToken(PLATAParser.DISTINTO, 0); }
		public IgualdadesExprRelacionalesContext(Expr_relacionalesContext ctx) { copyFrom(ctx); }
	}

	public final Expr_relacionalesContext expr_relacionales() throws RecognitionException {
		Expr_relacionalesContext _localctx = new Expr_relacionalesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr_relacionales);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new RelacionesExprRelacionalesContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				expr_aritmeticas(0);
				setState(123);
				((RelacionesExprRelacionalesContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 62914560L) != 0)) ) {
					((RelacionesExprRelacionalesContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(124);
				expr_aritmeticas(0);
				}
				break;
			case 2:
				_localctx = new IgualdadesExprRelacionalesContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				expr_aritmeticas(0);
				setState(127);
				((IgualdadesExprRelacionalesContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==DISTINTO || _la==IGUAL_QUE) ) {
					((IgualdadesExprRelacionalesContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(128);
				expr_aritmeticas(0);
				}
				break;
			case 3:
				_localctx = new ParentesisExprRelacionalesContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				match(T__0);
				setState(131);
				expr_relacionales();
				setState(132);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
